--- a/package.json
+++ b/package.json
@@ -24,8 +24,15 @@
     "@nuxt/typescript-runtime": "^0.4.0",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
+    "@nuxtjs/firebase": "^5.0.7",
     "@nuxtjs/pwa": "^3.0.0-0",
-    "nuxt": "^2.0.0"
+    "@nuxtjs/sentry": "^4.0.2",
+    "dotenv": "^8.2.0",
+    "firebase": "^7.14.2",
+    "lodash": "^4.17.15",
+    "moment-timezone": "^0.5.28",
+    "nuxt": "^2.0.0",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.0",
